html structure set, initial css

--- a/index.html
+++ b/index.html
@@ -7,5 +7,61 @@
   </head>
   <body>
 
+    <!-- HEADER -->
+    <header>
+      <div class="logo">
+
+      </div>
+
+      <nav>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </nav>
+
+    </header><!-- @end header -->
+
+    <!-- SECTION MISSION -->
+    <section>
+      <div class="mission">
+
+      </div>
+    </section><!-- @end section .mission -->
+
+    <!-- SECTION MONTHLY -->
+    <section>
+      <div class="monthly">
+
+      </div>
+    </section><!-- @end section .monthly -->
+
+    <!-- SECTION LOCATIONS -->
+    <section>
+      <div class="locations">
+
+      </div>
+    </section><!-- @end section .locations -->
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="company">
+
+      </div>
+
+      <div class="email">
+
+      </div>
+
+      <div class="phone">
+
+      </div>
+
+      <div class="copyright">
+
+      </div>
+    </footer><!-- @end footer -->
+
   </body>
 </html>
