header & section mission complete

--- a/index.html
+++ b/index.html
@@ -10,36 +10,37 @@
     <!-- HEADER -->
     <header>
       <div class="logo">
-
+        <img src="assets/img/img-tea-cozy-logo.png" alt="Tea Cozy">
       </div>
 
       <nav>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li><a href="#mission">Mission</a></li>
+          <li><a href="#monthly">Feature Tea</a></li>
+          <li><a href="#locations">Locations</a></li>
         </ul>
       </nav>
 
     </header><!-- @end header -->
 
     <!-- SECTION MISSION -->
-    <section>
-      <div class="mission">
-
+    <section class="mission">
+      <div id="mission">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
     </section><!-- @end section .mission -->
 
     <!-- SECTION MONTHLY -->
     <section>
-      <div class="monthly">
+      <div id="monthly">
 
       </div>
     </section><!-- @end section .monthly -->
 
     <!-- SECTION LOCATIONS -->
     <section>
-      <div class="locations">
+      <div id="locations">
 
       </div>
     </section><!-- @end section .locations -->
