section monthly complete; validate double donut pic (myrtle ave)

--- a/index.html
+++ b/index.html
@@ -32,10 +32,35 @@
     </section><!-- @end section .mission -->
 
     <!-- SECTION MONTHLY -->
-    <section>
+    <section class="monthly">
       <div id="monthly">
-
-      </div>
+        <div class="monthly-title">
+          <h2>Tea of the Month</h2>
+          <h4>What&apos;s Steeping at The Tea Cozy?</h4>
+        </div><!-- @end .monthly-title -->
+        <div class="monthly-img">
+          <div class="monthly-grp">
+            <img src="assets/img/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
+            <h4>Fall Berry Blitz Tea</h4>
+          </div>
+          <div class="monthly-grp">
+            <img src="assets/img/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+            <h4>Spiced Rum Tea</h4>
+          </div>
+          <div class="monthly-grp">
+            <img src="assets/img/img-donut.jpg" alt="Seasonal Donuts">
+            <h4>Seasonal Donuts</h4>
+          </div>
+          <div class="monthly-grp">
+            <img src="assets/img/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+            <h4>Myrtle Ave Tea</h4>
+          </div>
+          <div class="monthly-grp">
+            <img src="assets/img/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
+        </div><!-- @end .monthly-img -->
+      </div><!-- @end .monthly -->
     </section><!-- @end section .monthly -->
 
     <!-- SECTION LOCATIONS -->
