section locations complete

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div id="mission">
         <h2>Our Mission</h2>
         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-      </div>
+      </div><!-- @end #mission -->
     </section><!-- @end section .mission -->
 
     <!-- SECTION MONTHLY -->
@@ -60,14 +60,36 @@
             <h4>Bedford Bizarre Tea</h4>
           </div>
         </div><!-- @end .monthly-img -->
-      </div><!-- @end .monthly -->
+      </div><!-- @end #monthly -->
     </section><!-- @end section .monthly -->
 
     <!-- SECTION LOCATIONS -->
-    <section>
+    <section class="locations">
       <div id="locations">
-
-      </div>
+        <div class="locations-title">
+          <h2>Locations</h2>
+        </div><!-- @end .locations-title -->
+        <div class="locations-list">
+          <div class="locations-grp">
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="locations-grp">
+            <h3>East Bayside</h3>
+            <p>33 Phiserman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="locations-grp">
+            <h3>Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+          </div>
+        </div><!-- @end .locations-list -->
+      </div><!-- @end #locations -->
     </section><!-- @end section .locations -->
 
     <!-- FOOTER -->
