--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
       <nav>
         <ul>
-          <li><a href="#mission">Mission</a></li>
-          <li><a href="#monthly">Feature Tea</a></li>
-          <li><a href="#locations">Locations</a></li>
+          <li><a href="#mission-nav">Mission</a></li>
+          <li><a href="#monthly-nav">Feature Tea</a></li>
+          <li><a href="#locations-nav">Locations</a></li>
         </ul>
       </nav>
 
     </header><!-- @end header -->
 
     <!-- SECTION MISSION -->
-    <section class="mission">
+    <section class="mission" id="mission-nav">
       <div id="mission">
         <h2>Our Mission</h2>
         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
@@ -32,7 +32,7 @@
     </section><!-- @end section .mission -->
 
     <!-- SECTION MONTHLY -->
-    <section class="monthly">
+    <section class="monthly" id="monthly-nav">
       <div id="monthly">
         <div class="monthly-title">
           <h2>Tea of the Month</h2>
@@ -64,7 +64,7 @@
     </section><!-- @end section .monthly -->
 
     <!-- SECTION LOCATIONS -->
-    <section class="locations">
+    <section class="locations" id="locations-nav">
       <div id="locations">
         <div class="locations-title">
           <h2>Locations</h2>
@@ -95,20 +95,22 @@
     <!-- FOOTER -->
     <footer>
       <div class="company">
+        <div class="company-title">
+          <h2>The Tea Cozy</h2>
+        </div><!-- @end .company-title -->
 
-      </div>
+        <div class="email">
+          <h5><a href="mailto:contact@theteacozy.com">contact@theteacozy.com</a></h5>
+        </div><!-- @end .email -->
 
-      <div class="email">
-
-      </div>
-
-      <div class="phone">
-
-      </div>
+        <div class="phone">
+          <h5><a href="tel:917-555-8904">917-555-8904</a></h5>
+        </div><!-- @end .phone -->
+      </div><!-- @end .company -->
 
       <div class="copyright">
-
-      </div>
+        <h5>&copy; copyright The Tea Cozy 2018</h5>
+      </div><!-- @end .copyright -->
     </footer><!-- @end footer -->
 
   </body>
