all code looks accurate based upon specs provided; ready for review

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>Tea Cozy</title>
+    <title>The Tea Cozy</title>
   </head>
   <body>
 
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li><a href="#mission-nav">Mission</a></li>
-          <li><a href="#monthly-nav">Feature Tea</a></li>
+          <li><a href="#monthly-nav">Featured Tea</a></li>
           <li><a href="#locations-nav">Locations</a></li>
         </ul>
       </nav>
